--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,16 @@
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    font-size: "poppins", sans-serif;
+    min-height: 100vh;
+    font-family: "poppins", sans-serif;
 
 }
 
 body{
-    min-height:100vh;
     background:black;
+    width: 100%;
 }
+
 
 .header{
     position: fixed;
@@ -18,4 +20,32 @@ body{
     width: 100%;
     padding: 20px 100px;
     background: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.img-container{
+    background: no-repeat center url(https://wallpapers.com/images/high/the-handmaid-s-tale-poster-7xe7ihw3tdbqiqwh.webp);
+    height: 20%;
+    background-size: cover;
+    position: relative;
+}
+
+.content-container{
+background-color: aliceblue;
+}
+
+p{
+    font-family: "poppins", sans-serif;
+    font-size: 25px;
+}
+
+img{
+    max-width: fit-content;
+}
+
+footer{
+    color: azure;
 }
