--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,52 @@
 
 
+body{
+    background: linear-gradient(109.6deg, rgb(6, 2, 2) 32.4%, rgb(137, 30, 47) 98.8%);    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+    text-align: center;
+    font-size: 35px;
+    color:rebeccapurple;
+}
+
+h2{
+    text-align: center;
+    font-size: 25px;
+    color:aliceblue;
+}
+
+img{
+    max-width: 100%;
+}
+
+button{
+    display:block;
+    margin: 0 auto;
+    border: 1px solid plum;
+    background: white;
+    font-size: 24px;
+    border-radius: 6px;
+    padding:10px 15px;
+    transition: all 150ms ease-in-out;
+}
+
+button:hover{
+    background: plum;
+    cursor: pointer;
+}
+
+.container{
+    max-width: 1000px;
+    background: white;
+    padding: 50px;
+    border-radius: 10px;
+    margin:20px auto;
+}
+
+footer{
+    text-align: center;
+    margin: 15px 0;
+}
+
+
