--- a/src/styles.css
+++ b/src/styles.css
@@ -68,13 +68,28 @@ a:hover{
     margin:20px auto;
 }
 
-.authorpicture{
+.grid{
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    grid-gap: 10px;
+    margin: 10px;
+
+}
+
+.grid img{
+    width:100%;
     border-radius: 10px;
-    transition: all 150 ms ease-in-out;
+}
+
+
+.authorpicture{
+    margin:10px auto;
+    border-radius: 10px;
+    transition: all 150ms ease-in-out;
 }
 
 .authorpicture:hover{
-    filter: contrast(50%);
+    filter: contrast(80%);
     transform: scale(1.2);
 
 }
@@ -82,6 +97,7 @@ a:hover{
 footer{
     text-align: center;
     margin: 15px 0;
+    color:azure
 }
 
 
