--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,32 @@ body{
     font-family: monospace;
 }
 
+header{
+    background-color: #333;
+    overflow:hidden;
+
+}
+
+.navbar a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 12px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .navbar a:hover {
+    background-color: #ddd;
+    /*background-color:#04AA6D;*/
+    color: black;
+  }
+
+  .navbar a.active {
+    background-color:rebeccapurple;
+    color: white;
+  }
+
 h1{
     text-align: center;
     font-size: 25px;
@@ -106,6 +132,7 @@ footer{
     background: black;
     color:white;
     padding:5 8px;
+    margin: 15px auto;
 }
 
 .theme-button:hover{
