Two containers in progress
designing two containers, side by side to show case the author's work.

--- a/src/styles.css
+++ b/src/styles.css
@@ -94,6 +94,11 @@ a:hover{
     margin:20px auto;
 }
 
+.content{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
 .grid{
     display: grid;
     grid-template-columns:1fr 1fr;
